# reddit

./: .gitignore  .travis.yml  LICENSE  Main.hs  README.md  cabal.project  flake.nix  package.yaml  reddit.cabal  stack-lts-11.22.yaml  stack-lts-12.26.yaml  stack-lts-13.19.yaml  stack-lts-18.19.yaml  stack-lts-18.28.yaml  stack-lts-19.15.yaml  stack-lts-9.21.yaml  stack.yaml
.circleci/: config.yml
ghcjs-example/: Main.hs
src/: Reddit.hs
src/Reddit/: API.hs  Actions.hs  Bot.hs  Login.hs  Parser.hs  Routes.hs  Types.hs  Utilities.hs
src/Reddit/API/: Actions.hs  Login.hs  Parser.hs  Routes.hs  Types.hs
src/Reddit/API/Actions/: Captcha.hs  Comment.hs  Flair.hs  Message.hs  Post.hs  Subreddit.hs  Thing.hs  User.hs  Voting.hs  Wiki.hs
src/Reddit/API/Routes/: Captcha.hs  Comment.hs  Flair.hs  Message.hs  Post.hs  Run.hs  Subreddit.hs  Thing.hs  User.hs  Vote.hs  Wiki.hs
src/Reddit/API/Types/: Captcha.hs  Comment.hs  Empty.hs  Error.hs  Flair.hs  Listing.hs  Message.hs  Options.hs  Post.hs  Reddit.hs  Subreddit.hs  SubredditSettings.hs  Thing.hs  User.hs  Wiki.hs
src/Reddit/Actions/: Captcha.hs  Comment.hs  Flair.hs  Message.hs  Moderation.hs  OAuth.hs  Post.hs  Search.hs  Subreddit.hs  Thing.hs  User.hs  Voting.hs  Wiki.hs
src/Reddit/Routes/: Captcha.hs  Comment.hs  Flair.hs  Message.hs  Moderation.hs  Post.hs  Run.hs  Search.hs  Subreddit.hs  Thing.hs  User.hs  Vote.hs  Wiki.hs
src/Reddit/Types/: Captcha.hs  Comment.hs  Empty.hs  Error.hs  Flair.hs  Listing.hs  Message.hs  Moderation.hs  OAuth.hs  Options.hs  Post.hs  Reddit.hs  SearchOptions.hs  Subreddit.hs  SubredditSettings.hs  Thing.hs  User.hs  Wiki.hs
test/: Main.hs
test-anon/Reddit/Actions/: CaptchaSpec.hs  CommentSpec.hs  FlairSpec.hs  MessageSpec.hs  PostSpec.hs  SearchSpec.hs  SubredditSpec.hs  UserSpec.hs
test-io/: ConfigLoad.hs
test-io/Reddit/API/Actions/: CaptchaSpec.hs  CommentSpec.hs  FlairSpec.hs  PostSpec.hs  SubredditSpec.hs  UserSpec.hs
test-io/Reddit/Actions/: CaptchaSpec.hs  CommentSpec.hs  FlairSpec.hs  MessageSpec.hs  PostSpec.hs  SubredditSpec.hs  UserSpec.hs
test-utils/: Utils.hs
test/Reddit/API/Types/: CommentSpec.hs  ListingSpec.hs  PostSpec.hs  SubredditSpec.hs  UserSpec.hs  WikiSpec.hs
test/Reddit/Types/: CommentSpec.hs  ListingSpec.hs  PostSpec.hs  SubredditSpec.hs  UserSpec.hs  WikiSpec.hs
test/data/: aboutMe_example.json  getUserComments_example.json  getUserInfo_example.json
