name:                reddit
version:             0.2.1.0
synopsis:            Library for interfacing with Reddit's API
description:
  A library for interfacing with Reddit's API in Haskell. Handles
  logins, rate-limiting and converting to and from JSON responses.

  Supports most user-facing Reddit API functions, as well as some
  moderator endpoints.

  Check out the readme at <https://github.com/intolerable/reddit>.
  Contributions are welcome.

license:             BSD2
license-file:        LICENSE
author:              Fraser Murray
maintainer:          fraser.m.murray@gmail.com
homepage:            https://github.com/intolerable/reddit
copyright:           Copyright (c) Fraser Murray, 2013-2015
category:            Network
build-type:          Simple
cabal-version:       >= 1.10
extra-source-files:
  README.md
  test/data/aboutMe_example.json
  test/data/getUserInfo_example.json
  test/data/getUserComments_example.json

source-repository head
  type: git
  location: https://github.com/intolerable/reddit

library
  exposed-modules:
    Reddit
    Reddit.Actions
    Reddit.Actions.Captcha
    Reddit.Actions.Comment
    Reddit.Actions.Flair
    Reddit.Actions.Message
    Reddit.Actions.Moderation
    Reddit.Actions.Post
    Reddit.Actions.Search
    Reddit.Actions.Subreddit
    Reddit.Actions.Thing
    Reddit.Actions.User
    Reddit.Actions.Voting
    Reddit.Actions.Wiki
    Reddit.Login
    Reddit.Types
    Reddit.Types.Captcha
    Reddit.Types.Comment
    Reddit.Types.Error
    Reddit.Types.Flair
    Reddit.Types.Listing
    Reddit.Types.Message
    Reddit.Types.Moderation
    Reddit.Types.Options
    Reddit.Types.Post
    Reddit.Types.Reddit
    Reddit.Types.SearchOptions
    Reddit.Types.Subreddit
    Reddit.Types.SubredditSettings
    Reddit.Types.Thing
    Reddit.Types.User
    Reddit.Types.Wiki
  other-modules:
    Paths_reddit
    Reddit.Parser
    Reddit.Routes
    Reddit.Routes.Captcha
    Reddit.Routes.Comment
    Reddit.Routes.Flair
    Reddit.Routes.Message
    Reddit.Routes.Moderation
    Reddit.Routes.Post
    Reddit.Routes.Search
    Reddit.Routes.Subreddit
    Reddit.Routes.Thing
    Reddit.Routes.User
    Reddit.Routes.Vote
    Reddit.Routes.Wiki
    Reddit.Types.Empty
    Reddit.Utilities
  default-extensions:
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
  default-language: Haskell2010
  hs-source-dirs: src/
  build-depends:
    base >= 4.6 && < 4.10,
    aeson >= 0.9 && < 0.12,
    api-builder >= 0.10 && < 0.13,
    bytestring == 0.10.*,
    data-default-class >= 0.0.1 && < 0.2,
    free >= 4 && < 5,
    http-client >= 0.4.30 && < 0.6,
    http-client-tls >= 0.2 && < 0.4,
    http-types >= 0.8 && < 0.10,
    network == 2.6.*,
    text == 1.*,
    time >= 1.5 && < 1.7,
    transformers >= 0.4 && < 0.6,
    unordered-containers >= 0.2.5 && < 0.3,
    vector >= 0.10 && < 0.12
  ghc-options: -Wall

test-suite test
  hs-source-dirs: test
  main-is: Spec.hs
  default-extensions: OverloadedStrings
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  build-depends:
    base == 4.*,
    Cabal >= 1.16.0,
    aeson,
    api-builder,
    bytestring,
    reddit,
    hspec,
    text,
    time,
    transformers
  ghc-options: -Wall

test-suite test-io
  hs-source-dirs: test-io
  main-is: Spec.hs
  default-extensions:
    OverloadedStrings
    Rank2Types
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  build-depends:
    base == 4.*,
    Cabal >= 1.16.0,
    api-builder,
    bytestring,
    http-client,
    http-client-tls,
    reddit,
    hspec,
    text,
    time,
    transformers
  ghc-options: -Wall

test-suite test-anon
  hs-source-dirs: test-anon
  main-is: Spec.hs
  default-extensions:
    OverloadedStrings
    Rank2Types
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  build-depends:
    base == 4.*,
    Cabal >= 1.16.0,
    api-builder,
    reddit,
    hspec,
    text,
    time,
    transformers
  ghc-options: -Wall
